--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -18,6 +18,7 @@
         <h2 id="instructions">Instructions</h2>
             <p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
             <div id="game-board" class="board clearfix"></div>
+            <div id="reset-board" class="board clearfix"></div>
             <p class="funfact"><b>Fun Fact</b>: A goldfish only have a memory span of 3 seconds.</p>
         <h2>About the Developer</h2>
         <a href="https://github.com/tkeeching" target="_blank">GitHub</a>
